package ethanmmd.mastermind.models;

public enum GameStatus {
    STARTED, PROPOSED, RESUMED, EXIT
}
